@@ -31,8 +31,8 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 	
 	if ($_POST['zipupload']){
 		check_admin_referer('ngg_addgallery');
-		if ($_FILES['zipfile']['error'] == 0) 
-			$messagetext = nggAdmin::import_zipfile( intval( $_POST['zipgalselect'] ) );
+		if ($_FILES['zipfile']['error'] == 0 || (!empty($_POST['zipurl']))) 
+			nggAdmin::import_zipfile( intval( $_POST['zipgalselect'] ) );
 		else
 			nggGallery::show_error( __('Upload failed!','nggallery') );
 	}
@@ -54,7 +54,7 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 	}
 	
 	if (isset($_POST['swf_callback'])){
-		if ($_POST['galleryselect'] == "0" )
+		if ($_POST['galleryselect'] == '0' )
 			nggGallery::show_error(__('No gallery selected !','nggallery'));
 		else {
 			// get the path to the gallery
@@ -211,6 +211,13 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 					<td><input type="file" name="zipfile" id="zipfile" size="35" class="uploadform"/><br />
 					<?php _e('Upload a zip file with images', 'nggallery') ;?></td> 
 				</tr>
+				<?php if (function_exists('curl_init')) : ?>
+				<tr valign="top"> 
+					<th scope="row"><?php _e('or enter a Zip-File URL', 'nggallery') ;?>:</th> 
+					<td><input type="text" name="zipurl" id="zipurl" size="35" class="uploadform"/><br />
+					<?php _e('Import a zip file with images from a url', 'nggallery') ;?></td> 
+				</tr>
+				<?php endif; ?>
 				<tr valign="top"> 
 					<th scope="row"><?php _e('in to', 'nggallery') ;?></th> 
 					<td><select name="zipgalselect">
